<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="viewModel"
      type="com.chass.gadsleaderboard.ui.submit.SubmitViewModel" />
  </data>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim"
    android:focusable="true"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1.0"
      tools:ignore="ObsoleteLayoutParam">

      <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <ImageButton
            android:id="@+id/cancel_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@color/transparent"
            android:onClick="@{()->viewModel.cancelSubmission()}"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_cancel_gray_24dp"
            android:contentDescription="@string/ucf_cancel_button" />

          <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp">

            <TextView
              android:id="@+id/question_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/are_you_sure"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textSize="24sp"
              android:textStyle="bold"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent" />

            <ImageView
              android:layout_width="48dp"
              android:layout_height="48dp"
              android:scaleType="fitXY"
              app:layout_constraintBottom_toBottomOf="@id/question_tv"
              app:layout_constraintStart_toEndOf="@id/question_tv"
              app:srcCompat="@drawable/ic_question_mark"
              android:contentDescription="@string/ucf_question_mark" />
          </androidx.constraintlayout.widget.ConstraintLayout>

          <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:background="@drawable/confirm_button_frame"
            android:minHeight="0dp"
            android:onClick="@{()->viewModel.confirmSubmission()}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/yes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FA9819"
            android:textSize="24sp"
            android:textStyle="bold" />
        </LinearLayout>

      </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</layout>