<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
    <import type="android.view.View"/>
    <variable
      name="viewModel"
      type="com.chass.gadsleaderboard.ui.splashscreen.SplashScreenViewModel" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    tools:context=".ui.splashscreen.SplashScreenActivity">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"/>
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dim"
        android:focusable="true"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          tools:ignore="ObsoleteLayoutParam">

          <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gads"
            app:anim="@{viewModel.fadeIn}"
            android:contentDescription="@string/ucf_app_logo" />

          <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/submit_title_underline_bg"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:anim="@{viewModel.fadeInAndOut}"
            tools:layout_editor_absoluteX="16dp" />

          <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#ffffff"
            android:visibility="@{viewModel.hasError? View.VISIBLE : View.GONE}"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/ucf_success_image"
                app:srcCompat="@drawable/ic_warning_red_24dp" />

              <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/load_error_message"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

              <Button
                android:id="@+id/reload_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:background="@drawable/form_button_bg"
                android:onClick="@{() -> viewModel.load()}"
                android:text="@string/ucf_reload" />
            </LinearLayout>

          </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
      </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>